[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/Mob2.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Moneda.tscn" type="PackedScene" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1.52588e-05, -1, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 479, 720, 0, 0, 0, 0, -1.52588e-05, 719, 0, 0, 0, 0, -1.52588e-05, -1 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )
Mob2 = ExtResource( 7 )
coin = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 719.0
color = Color( 0.423529, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 250, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -1.52588e-05, -1 )
rotation = 0.00208335

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="agafar_moneda" from="Player" to="." method="_on_Player_agafar_moneda"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_CoinTimer_timeout"]
